fix: content text pre-wrap

--- a/src/components/layout/msg/content/index.module.scss
+++ b/src/components/layout/msg/content/index.module.scss
@@ -92,3 +92,7 @@
   border-left: 1px solid green;
   padding-left: 10px;
 }
+
+.contentText {
+  white-space: pre-wrap; 
+}
